@@ -21,6 +21,7 @@ S3method(map,listenv)
 S3method(names,listenv)
 S3method(print,AsyncListEnv)
 S3method(print,AsyncTask)
+S3method(print,listenv)
 S3method(status,AsyncListEnv)
 S3method(status,AsyncTask)
 S3method(value,AsyncListEnv)
